--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,26 +1,25 @@
 {% extends "base.html" %}
 
-{% block title %}Поиск отелей{% endblock %}
+{% block title %}Главная{% endblock %}
 
 {% block content %}
+<h2 class="mb-4">Поиск отелей</h2>
 
-<h2>Поиск отелей</h2>
-
-<form action="/pages/hotels" method="GET" class="row g-3 mb-4">
+<form class="row g-3 mb-4">
     <div class="col-md-4">
         <label for="location" class="form-label">Локация</label>
-        <input type="text" id="location" name="location" class="form-control" required>
+        <input type="text" id="location" name="location" class="form-control">
     </div>
     <div class="col-md-3">
         <label for="date_from" class="form-label">Дата заезда</label>
-        <input type="date" id="date_from" name="date_from" class="form-control" required>
+        <input type="date" id="date_from" name="date_from" class="form-control">
     </div>
     <div class="col-md-3">
         <label for="date_to" class="form-label">Дата выезда</label>
-        <input type="date" id="date_to" name="date_to" class="form-control" required>
+        <input type="date" id="date_to" name="date_to" class="form-control">
     </div>
     <div class="col-md-2 d-flex align-items-end">
-        <button type="submit" class="btn btn-primary w-100">Найти</button>
+        <button type="submit" class="btn btn-primary w-100" disabled>Найти (в разработке)</button>
     </div>
 </form>
 
@@ -29,13 +28,11 @@
     <div class="col-md-6 mb-4">
         <div class="card h-100">
             <img src="{{ url_for('static', path='images/' + hotel.image_id|string + '.webp') }}" 
-                 class="card-img-top" alt="Фото отеля {{ hotel.name }}">
+                 class="card-img-top hotel-image" alt="Фото отеля {{ hotel.name }}">
             <div class="card-body">
                 <h5 class="card-title">{{ hotel.name }}</h5>
                 <p class="card-text">{{ hotel.location }}</p>
-
-                <a href="/pages/hotels/{{ hotel.id }}?date_from={{ request.query_params.date_from }}&date_to={{ request.query_params.date_to }}" 
-                   class="btn btn-outline-primary mt-2">
+                <a href="/pages/hotels/{{ hotel.id }}" class="btn btn-outline-primary mt-2">
                     Смотреть номера
                 </a>
             </div>
@@ -43,5 +40,4 @@
     </div>
     {% endfor %}
 </div>
-
 {% endblock %}
