--- a/app/templates/hotel_detail.html
+++ b/app/templates/hotel_detail.html
@@ -10,16 +10,16 @@
 <h4 class="mb-4">Номера</h4>
 
 <div class="row">
-    {% for room in rooms %}
+    {% for room in rooms|sort(attribute='id') %}
     <div class="col-md-6 mb-4">
         <div class="card h-100">
-            <img src="{{ url_for('static', path='images/' + room.image_id|string + '.webp') }}"
-                 class="card-img-top hotel-image" alt="Фото номера">
             <div class="card-body">
                 <h5 class="card-title">{{ room.name }}</h5>
+                <p class="text-muted">Здесь вы видите красивую картинку номера</p>
                 <p class="card-text">{{ room.description }}</p>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><strong>Цена:</strong> {{ room.price }} ₽</li>
+                    <li class="list-group-item"><strong>Свободных номеров:</strong> {{ room.rooms_left }}</li>
                     <li class="list-group-item"><strong>Услуги:</strong> {{ room.services }}</li>
                 </ul>
                 <a href="/pages/booking?room_id={{ room.id }}" class="btn btn-primary mt-3 w-100">Забронировать</a>
