--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -4,19 +4,18 @@
 
 {% block content %}
 <h2>Регистрация</h2>
-<form method="post" action="/auth/register" class="w-50 mx-auto mt-4">
+<form method="post" action="/pages/auth/register" class="w-50 mt-4">
     <div class="mb-3">
         <label for="email" class="form-label">Email</label>
-        <input type="email" class="form-control" id="email" name="email" required>
+        <input type="email" class="form-control" name="email" id="email" required>
     </div>
-    <div class="mb-3">
-        <label for="name" class="form-label">Имя</label>
-        <input type="text" class="form-control" id="name" name="name" required>
-    </div>
+
     <div class="mb-3">
         <label for="password" class="form-label">Пароль</label>
-        <input type="password" class="form-control" id="password" name="password" required>
+        <input type="password" class="form-control" name="password" id="password" required>
     </div>
-    <button type="submit" class="btn btn-success">Зарегистрироваться</button>
+
+    <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
 </form>
+
 {% endblock %}
