--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,7 +33,7 @@
             <div class="card-body">
                 <h5 class="card-title">{{ hotel.name }}</h5>
                 <p class="card-text">{{ hotel.location }}</p>
-                <a href="/pages/hotels/{{ hotel.id }}" class="btn btn-outline-primary mt-2">
+                <a href="/pages/hotels/{{ hotel.id }}?date_from={{ date_from }}&date_to={{ date_to }}" class="btn btn-outline-primary mt-2">
                     Смотреть номера
                 </a>
             </div>
