--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,6 +23,12 @@
     </div>
 </form>
 
+{% if error %}
+  <div class="alert alert-danger" role="alert">
+    {{ error }}
+  </div>
+{% endif %}
+
 
 <div class="row">
     {% for hotel in hotels %}
