--- a/app/templates/hotel_detail.html
+++ b/app/templates/hotel_detail.html
@@ -9,7 +9,6 @@
 
 <h4 class="mb-4">Номера</h4>
 
-<pre>{{ room | pprint }}</pre>
 
 <div class="row">
     {% for room in rooms|sort(attribute='id') %}
@@ -24,7 +23,7 @@
                     <li class="list-group-item"><strong>Свободных номеров:</strong> {{ room['rooms_left'] }}</li>
                     <li class="list-group-item"><strong>Услуги:</strong> {{ room.services }}</li>
                 </ul>
-                <a href="/pages/booking?room_id={{ room.id }}" class="btn btn-primary mt-3 w-100">Забронировать</a>
+                <a href="/pages/booking?room_id={{ room.id }}&date_from={{ date_from }}&date_to={{ date_to }}" class="btn btn-primary mt-3 w-100">Забронировать</a>
             </div>
         </div>
     </div>
