--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -3,27 +3,35 @@
 {% block title %}Регистрация{% endblock %}
 
 {% block content %}
-<h2>Регистрация</h2>
+<div class="d-flex justify-content-center mt-5">
+  <div class="w-50">
 
-{% if error %}
-<div class="alert alert-danger" role="alert">
-    {{ error }}
-</div>
-{% endif %}
+    <h2 class="mb-4">Регистрация</h2>
 
+    {% if error %}
+    <div class="alert alert-danger" role="alert">
+        {{ error }}
+    </div>
+    {% endif %}
 
-<form method="post" action="/pages/auth/register" class="w-50 mt-4">
-    <div class="mb-3">
+    <form method="post" action="/pages/auth/register">
+      <div class="mb-3">
         <label for="email" class="form-label">Email</label>
         <input type="email" class="form-control" name="email" id="email" required>
-    </div>
+      </div>
 
-    <div class="mb-3">
+      <div class="mb-3">
         <label for="password" class="form-label">Пароль</label>
         <input type="password" class="form-control" name="password" id="password" required>
-    </div>
+      </div>
 
-    <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
-</form>
+      <button type="submit" class="btn btn-primary w-100">Зарегистрироваться</button>
+    </form>
 
+    <p class="mt-3 text-center">
+      Уже есть аккаунт? <a href="/pages/login">Войти</a>
+    </p>
+
+  </div>
+</div>
 {% endblock %}
